Added linkage to css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset = "utf-8">
     <title>Stuyvesant Cartoon Club</title>
-    <link type = "stylesheet" rel = "stylesheet" href="style.css">
+    <link type = "text/css" rel = "stylesheet" href="style.css">
   </head>
   <body>
     <h1>Welcome to Stuyvesant Cartoon Club!!!</h1>
