--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Welcome to Stuyvesant Cartoon Club!!!</h1>
     <div id = "announcements">
       <!-- add markdown md, store markdown in a new directory -->
-      <h2>Announements</h2>
+      <h2>Announcements</h2>
     </div>
     <div id = "container">
       <div id = "artwork" class = ".display">
@@ -18,6 +18,8 @@
       <div id = "members" class = ".display">
         <h2>members</h2>
         <ul>
+          <li>Kelly Wang</li>
+          <li>Brian Kwong</li>
           <li></li>
         </ul>
       </div>
