--- a/index.html
+++ b/index.html
@@ -9,21 +9,39 @@
     <h1>Welcome to Stuyvesant Cartoon Club!!!</h1>
     <div id = "announcements">
       <!-- add markdown md, store markdown in a new directory -->
-      <h2>Announcements</h2>
+      <h2>announcements</h2>
     </div>
     <div id = "container">
-      <div id = "artwork" class = ".display">
+      <a href="artwork.html" style="text-decoration: none; color: white;"><div id = "artwork" class = "display">
         <h2>artwork</h2>
-      </div>
-      <div id = "members" class = ".display">
+		<h3>Click to view artwork</h3>
+      </div></a>
+      <div id = "members" class = "display">
         <h2>members</h2>
-        <ul>
-          <li>Kelly Wang</li>
-          <li>Brian Kwong</li>
-          <li></li>
-        </ul>
+		<table>
+			<tr>
+				<td>Kelly Wang</td>
+				<td>President</td>
+			</tr>
+			<tr>
+				<td>Brian Kwong</td>
+				<td>Vice President</td>
+			</tr>
+			<tr>
+				<td>Qing Yi Ye</td>
+				<td>Secretary</td>
+			</tr>
+			<tr>
+				<td>Samantha Ngo</td>
+				<td>Treasurer</td>
+			</tr>
+			<tr>
+				<td>Shivasuryan Vummidi</td>
+				<td>Web Developer</td>
+			</tr>
+		</table>
       </div>
-      <div id = "mission" class = ".display">
+      <div id = "mission" class = "display">
         <h2>mission statement</h2>
       </div>
     </div>
