--- a/artwork.html
+++ b/artwork.html
@@ -7,13 +7,12 @@
   </head>
   <body>
     <h1>Artwork</h1>
-	<a href="index.html" style="text-align: center; color: white; text-decoration: none;"><h2>homepage</h2></a>
-    <div id = "artwork">
-		<!--use figures to make it organized / COPY THIS-->
-		<figure>
-			<img src="artwork/" alt="Picture">
-			<figcaption></figcaption>
-		</figure>
+	<a href="index.html" style="text-align: center; color: white;"><h2>Click for Homepage</h2></a>
+    <div>
+		<div class="display2"><a href="artwork/1.jpg"><img class="image" src="artwork/1.jpg" alt="Picture"></a><p>By Kelly Wang</p></div>
+		<div class="display2"><a href="artwork/2.jpg"><img class="image" src="artwork/2.jpg" alt="Picture"></a><p>By Kelly Wang</p></div>
+		<div class="display2"><a href="artwork/3.jpg"><img class="image" src="artwork/3.jpg" alt="Picture"></a><p>By Seungjoo Lee</p></div>
+		<div class="display2"><a href="artwork/4.jpg"><img class="image" src="artwork/4.jpg" alt="Picture"></a><p>By Arkara Boonthong</p></div>
     </div>
   </body>
 </html>
