--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
   </head>
   <body>
     <h1>Welcome to Stuyvesant Cartoon Club!!!</h1>
-    <div id = "announcements">
+    <div id = "announcements" style="overflow-y: auto;">
       <!-- add markdown md, store markdown in a new directory -->
-      <h2>announcements</h2>
+      <h2>Announcements</h2>
+	  
     </div>
     <div id = "container">
       <a href="artwork.html" style="text-decoration: none; color: white;"><div id = "artwork" class = "display">
-        <h2>artwork</h2>
+        <h2>Artwork</h2>
 		<h3>Click to view artwork</h3>
       </div></a>
       <div id = "members" class = "display">
-        <h2>members</h2>
+        <h2>Members</h2>
 		<table>
 			<tr>
 				<td>Kelly Wang</td>
@@ -42,7 +43,10 @@
 		</table>
       </div>
       <div id = "mission" class = "display">
-        <h2>mission statement</h2>
+        <h2>Mission Statement</h2>
+		<p>The purpose of this club is to expose many students to the the infinite boundaries of cartoon drawing. Many students ranging from novice levels to advanced levels are free to join and draw cartoons from many beloved shows using different types of media from watercolor to color-pencils! For example, a common theme that will be brought out is Disney but the range is really endless. Our club's mission is to relate these cartoons to themes and sell them in Stuyvesant High School to the students who walk through the 2nd floor as they are leaving or entering the school- all of the income generated will then be donated to charities to help those in need. For our members, we hope to create an energetic and still stress-free environment to nourish everyone's inner artist.  
+</p>
+		<p>What makes Cartoon Club so special is because it offers a wide variety of opportunities to both artists and people who want to awaken their inner artists. We can help you develop art skill whether you want to professionally be in the art field or if it's just for fun. From mentoring to competitions, Cartoon Club is all about fostering a chill and educational environment that can get extremely fun as well.</p>
       </div>
     </div>
   </body>
