--- a/artwork.html
+++ b/artwork.html
@@ -13,6 +13,15 @@
 		<div class="display2"><a href="artwork/2.jpg"><img class="image" src="artwork/2.jpg" alt="Picture"></a><p>By Kelly Wang</p></div>
 		<div class="display2"><a href="artwork/3.jpg"><img class="image" src="artwork/3.jpg" alt="Picture"></a><p>By Seungjoo Lee</p></div>
 		<div class="display2"><a href="artwork/4.jpg"><img class="image" src="artwork/4.jpg" alt="Picture"></a><p>By Arkara Boonthong</p></div>
+		<div class="display2"><a href="artwork/5.jpg"><img class="image" src="artwork/5.jpg" alt="Picture"></a><p>By Arkara Boonthong</p></div>
+		<div class="display2"><a href="artwork/6.jpg"><img class="image" src="artwork/6.jpg" alt="Picture"></a><p>By Shivasuryan Vummidi</p></div>
+		<div class="display2"><a href="artwork/7.jpg"><img class="image" src="artwork/7.jpg" alt="Picture"></a><p>By Seungjoo Lee</p></div>
+		<div class="display2"><a href="artwork/8.jpg"><img class="image" src="artwork/8.jpg" alt="Picture"></a><p>By Seungjoo Lee</p></div>
+		<div class="display2"><a href="artwork/9.jpg"><img class="image" src="artwork/9.jpg" alt="Picture"></a><p>By Seungjoo Lee</p></div>
+		<div class="display2"><a href="artwork/10.jpg"><img class="image" src="artwork/10.jpg" alt="Picture"></a><p>By Kelly Wang</p></div>
+		<div class="display2"><a href="artwork/11.jpg"><img class="image" src="artwork/11.jpg" alt="Picture"></a><p>By Arpita Nag and Adris Jautakas</p></div>
+		<div class="display2"><a href="artwork/12.jpg"><img class="image" src="artwork/12.jpg" alt="Picture"></a><p>By Arpita Nag and Arkara Boonthong</p></div>
+		<div class="display2"><a href="artwork/13.jpg"><img class="image" src="artwork/13.jpg" alt="Picture"></a><p>By Arkara Boonthong</p></div>
     </div>
   </body>
 </html>
