--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <h1>Welcome to Stuyvesant Cartoon Club!!!</h1>
-    <div id = "announcements" style="overflow-y: auto;">
+    <div id = "calendar" style="overflow-y: auto;">
       <!-- add markdown md, store markdown in a new directory -->
-      <h2>Announcements</h2>
-	  
+      <h2>Calendar</h2>
+	  <iframe src="https://calendar.google.com/calendar/embed?src=stuycartoonclub%40gmail.com&ctz=America/New_York" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
     <div id = "container">
       <a href="artwork.html" style="text-decoration: none; color: white;"><div id = "artwork" class = "display">
