--- a/artwork.html
+++ b/artwork.html
@@ -21,7 +21,7 @@
 		<div class="display2"><a href="artwork/10.jpg"><img class="image" src="artwork/10.jpg" alt="Picture"></a><p>By Kelly Wang</p></div>
 		<div class="display2"><a href="artwork/11.jpg"><img class="image" src="artwork/11.jpg" alt="Picture"></a><p>By Arpita Nag and Adris Jautakas</p></div>
 		<div class="display2"><a href="artwork/12.jpg"><img class="image" src="artwork/12.jpg" alt="Picture"></a><p>By Arpita Nag and Arkara Boonthong</p></div>
-		<div class="display2"><a href="artwork/13.jpg"><img class="image" src="artwork/13.jpg" alt="Picture"></a><p>By Arkara Boonthong</p></div>
+		<div class="display2"><a href="artwork/13.jpg"><img class="image" src="artwork/13.JPG" alt="Picture"></a><p>By Arkara Boonthong</p></div>
     </div>
   </body>
 </html>
