--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<td>President</td>
 			</tr>
 			<tr>
-				<td>Brian Kwong</td>
+				<td>Mithila Farin</td>
 				<td>Vice President</td>
 			</tr>
 			<tr>
