--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2>Members</h2>
 		<table>
 			<tr>
-				<td>Kelly Wang</td>
+				<td>Kelly Wang 1</td>
 				<td>President</td>
 			</tr>
 			<tr>
@@ -24,12 +24,8 @@
 				<td>Vice President</td>
 			</tr>
 			<tr>
-				<td>Qing Yi Ye</td>
-				<td>Secretary</td>
-			</tr>
-			<tr>
-				<td>Samantha Ngo</td>
-				<td>Treasurer</td>
+				<td>Kelly Wang 2</td>
+				<td>Event Leader</td>
 			</tr>
 			<tr>
 				<td>Shivasuryan Vummidi</td>
