--- a/artwork.html
+++ b/artwork.html
@@ -22,6 +22,20 @@
 		<div class="display2"><a href="artwork/11.jpg"><img class="image" src="artwork/11.jpg" alt="Picture"></a><p>By Arpita Nag and Adris Jautakas</p></div>
 		<div class="display2"><a href="artwork/12.jpg"><img class="image" src="artwork/12.jpg" alt="Picture"></a><p>By Arpita Nag and Arkara Boonthong</p></div>
 		<div class="display2"><a href="artwork/13.JPG"><img class="image" src="artwork/13.JPG" alt="Picture"></a><p>By Arkara Boonthong</p></div>
+		<div class="display2"><a href="artwork/14.JPG"><img class="image" src="artwork/14.JPG" alt="Picture"></a><p>By Arkara Boonthong</p></div>
+		<div class="display2"><a href="artwork/15.JPG"><img class="image" src="artwork/15.JPG" alt="Picture"></a><p>By Kelly Wang</p></div>
+		<div class="display2"><a href="artwork/16.JPG"><img class="image" src="artwork/16.JPG" alt="Picture"></a><p>By Kelly Wang</p></div>
+		<div class="display2"><a href="artwork/17.JPG"><img class="image" src="artwork/17.JPG" alt="Picture"></a><p>By Seungjoo Lee</p></div>
+		<div class="display2"><a href="artwork/18.JPG"><img class="image" src="artwork/18.JPG" alt="Picture"></a><p>By Arkara Boonthong</p></div>
+		<div class="display2"><a href="artwork/19.JPG"><img class="image" src="artwork/19.JPG" alt="Picture"></a><p>By Arkara Boonthong</p></div>
+		<div class="display2"><a href="artwork/20.JPG"><img class="image" src="artwork/20.JPG" alt="Picture"></a><p>By Janice Tjan</p></div>
+		<div class="display2"><a href="artwork/21.JPG"><img class="image" src="artwork/21.JPG" alt="Picture"></a><p>By Arkara Boonthong</p></div>
+		<div class="display2"><a href="artwork/22.JPG"><img class="image" src="artwork/22.JPG" alt="Picture"></a><p>By Kelly Wang</p></div>
+		<div class="display2"><a href="artwork/23.JPG"><img class="image" src="artwork/23.JPG" alt="Picture"></a><p>By Kelly Wang</p></div>
+		<div class="display2"><a href="artwork/24.JPG"><img class="image" src="artwork/24.JPG" alt="Picture"></a><p>By Arkara Boonthong</p></div>
+		<div class="display2"><a href="artwork/25.JPG"><img class="image" src="artwork/25.JPG" alt="Picture"></a><p>By Daniel Tam</p></div>
+		<div class="display2"><a href="artwork/26.JPG"><img class="image" src="artwork/26.JPG" alt="Picture"></a><p>By Arkara Boonthong</p></div>
+		<div class="display2"><a href="artwork/27.JPG"><img class="image" src="artwork/27.JPG" alt="Picture"></a><p>By Kelly Wang</p></div>
     </div>
   </body>
 </html>
