--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 </p>
 		<p>What makes Cartoon Club so special is because it offers a wide variety of opportunities to both artists and people who want to awaken their inner artists. We can help you develop art skill whether you want to professionally be in the art field or if it's just for fun. From mentoring to competitions, Cartoon Club is all about fostering a chill and educational environment that can get extremely fun as well.</p>
       </div>
+	  <p>In the 2016-2017 school year, we donated $186 from only winter holiday sales to reputable charities such as Red Cross.</p>
+	  <p>In the 2017-2018 school year, we donated $323 from winter holiday sales and Valentine's Day sales.</p>
 	  <div id = "calendar" style="overflow-y: auto;">
       <!-- add markdown md, store markdown in a new directory -->
 		<h2>Calendar</h2>
